# Employee_Register

SiemieniecDamian-etap2/: CMakeLists.txt  administrator.cpp  administrator.h  analityk.cpp  analityk.h  firma.h  ksiegowy.cpp  ksiegowy.h  main.cpp  pracownik.cpp  pracownik.h  programista.cpp  programista.h  stazysta.cpp  stazysta.h  stdin2.txt  stdin3.txt  temat2.txt
